<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".manage_inventory.ManageInventory">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="8dp"
        app:layout_constraintTop_toTopOf="parent" >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/header"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            app:layout_constraintTop_toTopOf="parent"
            android:background="@color/cardview_dark_background">

            <ImageView
                android:id="@+id/header_logo"
                android:layout_width="200dp"
                android:layout_height="100dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:adjustViewBounds="true"
                android:contentDescription="@string/little_rock_farms_logo"
                android:scaleType="fitCenter"
                android:src="@drawable/lrf_logo2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <TextView
                android:id="@+id/header_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/manage_inventory_label"
                android:textSize="50sp"
                android:textColor="@color/white"
                android:layout_marginEnd="10dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:id="@+id/row1"
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:orientation="horizontal"
            android:weightSum="1.0"
            app:layout_constraintTop_toBottomOf="@id/header"
            app:layout_constraintStart_toStartOf="parent"
            android:gravity="center">

            <Button
                android:id="@+id/button_manage_inventory_to_manage_categories"
                android:layout_height="wrap_content"
                android:layout_weight=".75"
                android:layout_width="0dip"
                android:text="@string/manage_categories_label"
                android:textSize="30sp"
                android:textColor="@color/white"
                android:backgroundTint="@color/cardview_dark_background"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/row2"
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:orientation="horizontal"
            android:weightSum="1.0"
            app:layout_constraintTop_toBottomOf="@id/row1"
            app:layout_constraintStart_toStartOf="parent"
            android:gravity="center">

            <Button
                android:id="@+id/button_manage_inventory_to_manage_products"
                android:layout_height="wrap_content"
                android:layout_weight=".75"
                android:layout_width="0dip"
                android:text="@string/manage_products_label"
                android:textSize="30sp"
                android:textColor="@color/white"
                android:backgroundTint="@color/cardview_dark_background"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/row3"
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:orientation="horizontal"
            android:weightSum="1.0"
            app:layout_constraintTop_toBottomOf="@id/row2"
            app:layout_constraintStart_toStartOf="parent"
            android:gravity="center">

        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>