<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#E0F7FA"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="20dp">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="10dp"
        app:cardElevation="6dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/row1"
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:orientation="horizontal"
            android:weightSum="1.0"
            app:layout_constraintTop_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:gravity="center_horizontal"
            >

                <TextView
                    android:id="@+id/card_category"
                    android:layout_height="match_parent"
                    android:layout_weight=".3"
                    android:layout_width="0dip"
                    android:text="@string/placeholder"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:textAlignment="center"
                    android:gravity="center"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                />
                <TextView
                    android:id="@+id/card_product"
                    android:layout_height="match_parent"
                    android:layout_weight=".3"
                    android:layout_width="0dip"
                    android:text="@string/placeholder"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:textAlignment="center"
                    android:gravity="center"
                    app:layout_constraintBottom_toBottomOf="parent"/>

                <TextView
                    android:id="@+id/card_price"
                    android:layout_height="match_parent"
                    android:layout_weight=".2"
                    android:layout_width="0dip"
                    android:text="@string/placeholder_money"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:textAlignment="center"
                    android:gravity="center"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    />

                <Button
                    android:id="@+id/button_delete_price"
                    android:layout_height="wrap_content"
                    android:layout_weight=".2"
                    android:layout_width="0dip"
                    android:text="@string/delete"
                    android:textSize="20sp"
                    android:gravity="center"
                    android:padding="5dp"

                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>