<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".manage_products.ManageProducts">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="8dp"
        app:layout_constraintTop_toTopOf="parent" >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/header"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            app:layout_constraintTop_toTopOf="parent"
            android:background="@color/cardview_dark_background">

            <ImageView
                android:id="@+id/header_logo"
                android:layout_width="200dp"
                android:layout_height="100dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:adjustViewBounds="true"
                android:contentDescription="@string/little_rock_farms_logo"
                android:scaleType="fitCenter"
                android:src="@drawable/lrf_logo2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <TextView
                android:id="@+id/header_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/manage_products_label"
                android:textSize="50sp"
                android:textColor="@color/white"
                android:layout_marginRight="10dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:id="@+id/row1"
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:orientation="horizontal"
            android:weightSum="1.0"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@id/header"
            app:layout_constraintStart_toStartOf="parent"
            android:gravity="center_horizontal"
            >

            <Spinner
                android:id="@+id/manage_products_category_dropdown"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@android:drawable/btn_dropdown"
                android:spinnerMode="dropdown"
                android:layout_weight=".75"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/row2"
            android:layout_marginTop="10dp"
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:orientation="horizontal"
            android:weightSum="1.0"
            app:layout_constraintTop_toBottomOf="@id/row1"
            app:layout_constraintStart_toStartOf="@id/row1"
            android:gravity="center_horizontal"
            >

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight=".5"
                android:layout_marginRight="20dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_text_product"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Add / Update Product"
                    android:textSize="30sp"/>
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight=".25"
                android:layout_marginRight="20dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_text_product_price"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:digits="0123456789."
                    android:inputType="numberDecimal"
                    android:textSize="30sp"
                    android:hint="Price" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/button_add_product"
                android:layout_height="match_parent"
                android:layout_weight=".25"
                android:layout_width="0dip"
                android:text="@string/create"
                android:textSize="30sp"
                android:textColor="@color/white"
                android:backgroundTint="@color/cardview_dark_background"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/row3"
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:orientation="horizontal"
            android:weightSum="1.0"
            app:layout_constraintTop_toBottomOf="@id/row2"
            app:layout_constraintStart_toStartOf="@id/row2"
            android:gravity="center">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/manage_products_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>